# wakaama

./: CMakeLists.txt  README.md
fuzzing/: CMakeLists.txt  fuzz_lwm2m_handle_packet.c
tests/: CMakeLists.txt  convert_numbers_test.c  list_tests.c  tests.h  unittests.c
wakaama-rs/src/: lib.rs
